force-app/main/default/objects/Reference_PEO_FROI__c/Reference_PEO_FROI__c.object-meta.xml
<CustomObject>
    <label>Reference PEO FROI</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference PEO Safety</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference PEO FROI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>