force-app/main/default/objects/Reference_PEO_FROI__c/fields/Class_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Class_Code_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class Code 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>