force-app/main/default/objects/Reference_PEO_FROI__c/fields/Client_Contact_Providing_Details__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Providing_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact Providing Details</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference PEO FROI</relationshipLabel>
    <relationshipName>Reference_PEO_FROI</relationshipName>
    <type>Lookup</type>
</CustomField>