force-app/main/default/objects/Reference_PEO_FROI__c/fields/CO_conducts_regular_MVR_checks__c.field-meta.xml
<CustomField>
    <fullName>CO_conducts_regular_MVR_checks__c</fullName>
    <inlineHelpText>Does the client perform new hire and regular MVR&apos;s for drivers?</inlineHelpText>
    <label>CO. conducts regular MVR checks?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>