force-app/main/default/objects/Reference_PEO_FROI__c/fields/Description_of_Facility__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Facility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Include age and type of construction, special features</inlineHelpText>
    <label>Description of Facility</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>