force-app/main/default/objects/Reference_PEO_FROI__c/fields/Did_the_IW_undergo_supervised_training__c.field-meta.xml
<CustomField>
    <fullName>Did_the_IW_undergo_supervised_training__c</fullName>
    <inlineHelpText>&quot;Did the employee undergo supervised training prior to driving this type of vehicle?&quot;</inlineHelpText>
    <label>Did the IW undergo supervised training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>