force-app/main/default/objects/Reference_PEO_FROI__c/fields/Employees_Involved_in_Safety_Program__c.field-meta.xml
<CustomField>
    <fullName>Employees_Involved_in_Safety_Program__c</fullName>
    <label>Employees Involved in Safety Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>