force-app/main/default/objects/Reference_PEO_FROI__c/fields/Fire_Explosion__c.field-meta.xml
<CustomField>
    <fullName>Fire_Explosion__c</fullName>
    <label>Fire/Explosion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Controlled</fullName>
            </value>
            <value>
                <fullName>Uncontrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>