force-app/main/default/objects/Reference_PEO_FROI__c/fields/Has_Employee_Reported_Other_WC_Claims__c.field-meta.xml
<CustomField>
    <fullName>Has_Employee_Reported_Other_WC_Claims__c</fullName>
    <label>Has Employee Reported Other WC Claims</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>