force-app/main/default/objects/Reference_PEO_FROI__c/fields/Heavy_Equipment_Travel__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Equipment_Travel__c</fullName>
    <label>Heavy Equipment - Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backhoe</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Dozer</fullName>
            </value>
            <value>
                <fullName>Excavators</fullName>
            </value>
            <value>
                <fullName>Graders</fullName>
            </value>
            <value>
                <fullName>Mower</fullName>
            </value>
            <value>
                <fullName>Skid Steer Loader</fullName>
            </value>
            <value>
                <fullName>Tractor</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>