force-app/main/default/objects/Reference_PEO_FROI__c/fields/Number_of_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shifts__c</fullName>
    <label>Number of Shifts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>