force-app/main/default/objects/Reference_PEO_FROI__c/fields/Other_Significant_Risk_Describe_Below__c.field-meta.xml
<CustomField>
    <fullName>Other_Significant_Risk_Describe_Below__c</fullName>
    <label>Other Significant Risk (Describe Below)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>