force-app/main/default/objects/Reference_PEO_FROI__c/fields/Other_Significant_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Significant_Risk_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Significant Risk Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>