force-app/main/default/objects/Reference_PEO_FROI__c/fields/Police_Department_Agency__c.field-meta.xml
<CustomField>
    <fullName>Police_Department_Agency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Police Department/Agency</label>
    <type>TextArea</type>
</CustomField>