force-app/main/default/objects/Reference_PEO_FROI__c/fields/QTR__c.field-meta.xml
<CustomField>
    <fullName>QTR__c</fullName>
    <label>QTR</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>