force-app/main/default/objects/Reference_PEO_FROI__c/fields/Was_this_a_result_of_an_MVA__c.field-meta.xml
<CustomField>
    <fullName>Was_this_a_result_of_an_MVA__c</fullName>
    <label>Was this a result of an MVA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>