force-app/main/default/objects/Reference_PEO_FROI__c/fields/WC_Class_Codes_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>WC_Class_Codes_Reviewed__c</fullName>
    <label>WC Class Codes Reviewed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>