force-app/main/default/objects/Reference_PEO_FROI__c/fields/X_ray_or_Laser_Exposure__c.field-meta.xml
<CustomField>
    <fullName>X_ray_or_Laser_Exposure__c</fullName>
    <label>X-ray or Laser Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Controlled</fullName>
            </value>
            <value>
                <fullName>Uncontrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>