force-app/main/default/objects/Reference_PEO_FROI__c/recordTypes/Reference_PEO_FROI.recordType-meta.xml
<RecordType>
    <fullName>Reference_PEO_FROI</fullName>
    <active>true</active>
    <label>Reference PEO FROI</label>
</RecordType>