force-app/main/default/objects/Reference_PEO_FROI__c/recordTypes/Risk_Assessment.recordType-meta.xml
<RecordType>
    <fullName>Risk_Assessment</fullName>
    <active>true</active>
    <label>Risk Assessment</label>
</RecordType>