force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_equipt_or_tools_need_make_and_model.validationRule-meta.xml
<ValidationRule>
    <fullName>If_equipt_or_tools_need_make_and_model</fullName>
    <active>true</active>
    <description>If IW was using equip/tools then you need to enter the make and model number of the tools used.</description>
    <errorConditionFormula>AND

(ISPICKVAL(  Was_the_IW_using_any_equip_tools__c 
, &quot;Yes&quot;) ,  ISBLANK(  Make_and_Model_Number_of_Tools__c )  )</errorConditionFormula>
    <errorDisplayField>Make_and_Model_Number_of_Tools__c</errorDisplayField>
    <errorMessage>If IW was using equip/tools then you need to enter the make and model number of the tools used.</errorMessage>
</ValidationRule>