force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_IW_Class_code_incorrect_need_details.validationRule-meta.xml
<ValidationRule>
    <fullName>If_IW_Class_code_incorrect_need_details</fullName>
    <active>true</active>
    <description>If IW class code is incorrect then you need to enter details</description>
    <errorConditionFormula>AND 
(
ISPICKVAL ( Is_the_IW_Class_Code_Correct__c, &quot;No&quot;),
ISBLANK ( Details_on_Correct_Class_Code__c )

)</errorConditionFormula>
    <errorDisplayField>Details_on_Correct_Class_Code__c</errorDisplayField>
    <errorMessage>If IW class code is incorrect then you need to enter details</errorMessage>
</ValidationRule>