force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_IW_lost_time_then_need_details.validationRule-meta.xml
<ValidationRule>
    <fullName>If_IW_lost_time_then_need_details</fullName>
    <active>true</active>
    <description>If IW is losing time, then you need more details</description>
    <errorConditionFormula>AND 
( 
ISPICKVAL ( Has_the_IW_lost_time_as_a_result__c, &quot;Yes&quot;), 
ISBLANK ( Details_on_employee_losing_time__c ) 
)</errorConditionFormula>
    <errorDisplayField>Details_on_employee_losing_time__c</errorDisplayField>
    <errorMessage>If IW is losing time, then you need more details</errorMessage>
</ValidationRule>