force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/IF_IW_not_wearing_PPE_then_details_need.validationRule-meta.xml
<ValidationRule>
    <fullName>IF_IW_not_wearing_PPE_then_details_need</fullName>
    <active>true</active>
    <description>If proper PPE = No, then you need details on PPE</description>
    <errorConditionFormula>AND 
( 
ISPICKVAL ( Was_proper_PPE_used__c , &quot;No&quot;), 
ISBLANK ( Details_on_PPE__c) 
)</errorConditionFormula>
    <errorDisplayField>Details_on_PPE__c</errorDisplayField>
    <errorMessage>If proper PPE = No, then you need details on PPE</errorMessage>
</ValidationRule>