force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_IW_receive_med_treatment_then_EE_med.validationRule-meta.xml
<ValidationRule>
    <fullName>If_IW_receive_med_treatment_then_EE_med</fullName>
    <active>true</active>
    <description>If IW received med treatment then you need details</description>
    <errorConditionFormula>AND
(
ISPICKVAL ( Did_the_IW_receive_medical_treatment__c, &quot;Yes&quot;),
ISBLANK (  Details_on_the_EE_medical_treatment__c)

)</errorConditionFormula>
    <errorDisplayField>Details_on_the_EE_medical_treatment__c</errorDisplayField>
    <errorMessage>If IW received med treatment then you need details</errorMessage>
</ValidationRule>