force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_Machine_guarding_played_a_role_then.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Machine_guarding_played_a_role_then</fullName>
    <active>true</active>
    <description>If Machine guarding played a role then you need details</description>
    <errorConditionFormula>AND 
( 
ISPICKVAL( Machine_Guarding_in_place_or_applic__c , &quot;Yes&quot;), 
ISBLANK ( Details_on_Machine_Guarding__c ) 

)</errorConditionFormula>
    <errorDisplayField>Details_on_Machine_Guarding__c</errorDisplayField>
    <errorMessage>If Machine guarding played a role then you need details</errorMessage>
</ValidationRule>