force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_citation.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_citation</fullName>
    <active>true</active>
    <description>If MVA is yes then need citation issued to</description>
    <errorConditionFormula>ISPICKVAL( Citation_Issued_To__c,&quot;&quot; ) &amp;&amp; ISPICKVAL(Was_this_a_result_of_an_MVA__c,&quot;Yes&quot;)</errorConditionFormula>
    <errorDisplayField>Citation_Issued_To__c</errorDisplayField>
    <errorMessage>If MVA = Yes then you need the Citation Issued To</errorMessage>
</ValidationRule>