force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_New_Hire_Refresher.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_New_Hire_Refresher</fullName>
    <active>true</active>
    <description>If MVA is yes then need New Hire/refresher</description>
    <errorConditionFormula>AND(
ISPICKVAL(Was_this_a_result_of_an_MVA__c, &quot;Yes&quot;),
ISPICKVAL(CO_provides_New_Hire_Refresher_training__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>CO_provides_New_Hire_Refresher_training__c</errorDisplayField>
    <errorMessage>If MVA = Yes then you need to enter if there was a New Hire/Refresher training</errorMessage>
</ValidationRule>