force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_Police_DepartmentAgency.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_Police_DepartmentAgency</fullName>
    <active>true</active>
    <description>If MVA is yes then need police dept/agency</description>
    <errorConditionFormula>ISBLANK( Police_Department_Agency__c ) &amp;&amp; ISPICKVAL(Was_this_a_result_of_an_MVA__c,&quot;Yes&quot;)</errorConditionFormula>
    <errorDisplayField>Police_Department_Agency__c</errorDisplayField>
    <errorMessage>If the field &quot;Was this a result of an MVA?&quot;= Yes then the field &quot;Police Department/Agency&quot; must have a value</errorMessage>
</ValidationRule>