force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_Police_Report_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_Police_Report_Number</fullName>
    <active>true</active>
    <description>If MVA is yes then need police report number.</description>
    <errorConditionFormula>ISBLANK(Police_Report_Number__c) &amp;&amp; ISPICKVAL(Was_this_a_result_of_an_MVA__c,&quot;Yes&quot;)</errorConditionFormula>
    <errorDisplayField>Police_Report_Number__c</errorDisplayField>
    <errorMessage>If the field &quot;Was this a result of an MVA?&quot;= Yes then the field &quot;Police Report Number&quot; must have a value</errorMessage>
</ValidationRule>