force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_regular_MVR_checks.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_regular_MVR_checks</fullName>
    <active>true</active>
    <description>If MVA is yes then need regular MVR checks</description>
    <errorConditionFormula>AND 
( ISPICKVAL( Was_this_a_result_of_an_MVA__c , &quot;Yes&quot;) , 
ISBLANK ( TEXT(  CO_conducts_regular_MVR_checks__c ) ) 

)</errorConditionFormula>
    <errorDisplayField>CO_conducts_regular_MVR_checks__c</errorDisplayField>
    <errorMessage>If MVA = Yes then you need to enter if the CO. conducts regular MVR checks?</errorMessage>
</ValidationRule>