force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_scheduled_supervisor_ri.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_scheduled_supervisor_ri</fullName>
    <active>true</active>
    <description>If MVA is yes then need info on scheduled supervisor ride-along</description>
    <errorConditionFormula>AND 
( ISPICKVAL( Was_this_a_result_of_an_MVA__c , &quot;Yes&quot;) , 
ISBLANK ( TEXT(  Scheduled_Supervisor_ride_alongs__c ) ) 

)</errorConditionFormula>
    <errorDisplayField>Scheduled_Supervisor_ride_alongs__c</errorDisplayField>
    <errorMessage>If MVA = Yes then you need to enter if there was a scheduled supervisor ride-along</errorMessage>
</ValidationRule>