force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_MVA_then_need_vehicle_type_model.validationRule-meta.xml
<ValidationRule>
    <fullName>If_MVA_then_need_vehicle_type_model</fullName>
    <active>true</active>
    <description>If MVA is yes then need vehicle type/model</description>
    <errorConditionFormula>ISBLANK( Vehicle_Type_Model_Experience_of_IW__c ) &amp;&amp; ISPICKVAL(Was_this_a_result_of_an_MVA__c,&quot;Yes&quot;)</errorConditionFormula>
    <errorDisplayField>Vehicle_Type_Model_Experience_of_IW__c</errorDisplayField>
    <errorMessage>If the field &quot;Was this a result of an MVA?&quot;= Yes then the field &quot;Vehicle Type/Model? Experience of IW?&quot; must have a value</errorMessage>
</ValidationRule>