force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_policy_violated_then_need_details_Ma.validationRule-meta.xml
<ValidationRule>
    <fullName>If_policy_violated_then_need_details_Ma</fullName>
    <active>true</active>
    <description>If Safety policy was violated then you need details</description>
    <errorConditionFormula>AND 
(
ISPICKVAL ( Safety_or_procedure_violated__c , &quot;Yes&quot;),
ISBLANK (  Details_on_procedures_violated__c  )

)</errorConditionFormula>
    <errorDisplayField>Details_on_procedures_violated__c</errorDisplayField>
    <errorMessage>If Safety policy was violated then you need details</errorMessage>
</ValidationRule>