force-app/main/default/objects/Reference_PEO_FROI__c/validationRules/If_worksite_not_owned_then_need_details.validationRule-meta.xml
<ValidationRule>
    <fullName>If_worksite_not_owned_then_need_details</fullName>
    <active>true</active>
    <description>If worksite is not owned by client then you need details</description>
    <errorConditionFormula>AND
(
ISPICKVAL ( Worksite_owned_and_maintained_by_Client__c, &quot;No&quot;),
ISBLANK ( Details_on_owned_and_maintained__c )

)</errorConditionFormula>
    <errorDisplayField>Details_on_owned_and_maintained__c</errorDisplayField>
    <errorMessage>If worksite is not owned by client then you need details</errorMessage>
</ValidationRule>